--- a/project/SarcasmDetection.ipynb
+++ b/project/SarcasmDetection.ipynb
@@ -939,6 +939,204 @@
    "source": [
     "text2 = \" \".join(line for line in normal[\"Headline\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9140/1287467330.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msarcasm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Sarcasm\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mheadlines\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Headline\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sarcasm = list(data[\"Sarcasm\"].values)\n",
+    "headlines = list(data[\"Headline\"].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = 7500\n",
+    "embedding_dim = 16\n",
+    "max_length = 40\n",
+    "trunc_type='post'\n",
+    "padding_type='post'\n",
+    "oov_tok = \"<OOV>\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_size = 23000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_headlines = headlines[0:training_size]\n",
+    "testing_headlines = headlines[training_size:]\n",
+    "\n",
+    "training_sarcasm = sarcasm[0:training_size]\n",
+    "testing_sarcasm = sarcasm[training_size:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_headlines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = Tokenizer(num_words=vocab_size, oov_token=oov_tok)\n",
+    "tokenizer.fit_on_texts(training_headlines)\n",
+    "\n",
+    "word_index = tokenizer.word_index\n",
+    "\n",
+    "training_sequences = tokenizer.texts_to_sequences(training_headlines)\n",
+    "training_padded = pad_sequences(training_sequences, maxlen=max_length, padding=padding_type, truncating=trunc_type)\n",
+    "\n",
+    "testing_sequences = tokenizer.texts_to_sequences(testing_headlines)\n",
+    "testing_padded = pad_sequences(testing_sequences, maxlen=max_length, padding=padding_type, truncating=trunc_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_padded = np.array(training_padded)\n",
+    "training_sarcasm = np.array(training_sarcasm)\n",
+    "testing_padded = np.array(testing_padded)\n",
+    "testing_sarcasm = np.array(testing_sarcasm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Embedding(vocab_size, embedding_dim, input_length=max_length),\n",
+    "    tf.keras.layers.GlobalAveragePooling1D(),\n",
+    "    tf.keras.layers.Dense(28, activation='relu'),\n",
+    "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+    "])\n",
+    "model.compile(loss='binary_crossentropy',optimizer='adam',metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model1 = Sequential()\n",
+    "model1.add(Embedding(vocab_size, embedding_dim, input_length=max_length))\n",
+    "model1.add(Flatten())\n",
+    "\n",
+    "model1.add(Dense(units=32,activation='relu'))\n",
+    "model1.add(Dropout(0.5))\n",
+    "\n",
+    "model1.add(Dense(units=10,activation='relu'))\n",
+    "model1.add(Dropout(0.5))\n",
+    "\n",
+    "model1.add(Dense(units=1,activation='sigmoid'))\n",
+    "\n",
+    "opt = tf.keras.optimizers.Adam(learning_rate=0.0001)\n",
+    "model1.compile(loss='binary_crossentropy', optimizer=opt, metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_lenght = ((len(word_index)) + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = tf.keras.Input(shape=(40,))\n",
+    "x = tf.keras.layers.Embedding(\n",
+    "    input_dim=24846,\n",
+    "    output_dim=64\n",
+    ")(inputs)\n",
+    "x = tf.keras.layers.Flatten()(x)\n",
+    "x = tf.keras.layers.Dense(128, activation='relu')(x)\n",
+    "x = tf.keras.layers.Dense(128, activation='relu')(x)\n",
+    "outputs = tf.keras.layers.Dense(1, activation='sigmoid')(x)\n",
+    "\n",
+    "model6 = tf.keras.Model(inputs=inputs, outputs=outputs)\n",
+    "\n",
+    "model6.compile(\n",
+    "    optimizer='adam',\n",
+    "    loss='binary_crossentropy',\n",
+    "    metrics=[\n",
+    "        'accuracy',\n",
+    "        tf.keras.metrics.AUC(name='auc')\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print(model6.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model1.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -957,7 +1155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
