--- a/project/SarcasmDetection.ipynb
+++ b/project/SarcasmDetection.ipynb
@@ -1136,12 +1136,69 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "history = model.fit(training_padded, training_sarcasm, epochs=3, validation_data=(testing_padded, testing_sarcasm), verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = model1.fit(training_padded, training_sarcasm, epochs=3, validation_data=(testing_padded, testing_sarcasm), verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc = history.history[\"accuracy\"]\n",
+    "val_acc = history.history[\"val_accuracy\"]\n",
+    "loss = history.history[\"loss\"]\n",
+    "val_loss = history.history[\"val_loss\"]\n",
+    "\n",
+    "epochs = range(1, len(acc)+1)\n",
+    "\n",
+    "plt.plot(epochs, acc, 'blue', label='Training accuracy')\n",
+    "plt.plot(epochs, val_acc, 'green', label='Validation accuracy')\n",
+    "plt.title('Training and validation accuracy')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.figure()\n",
+    "\n",
+    "plt.plot(epochs, loss, 'blue', label='Training loss')\n",
+    "plt.plot(epochs, val_loss, 'green', label='Validation loss')\n",
+    "plt.title('Training and validation loss')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(r\"models/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model1.save(r\"models\\Model2\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1155,7 +1212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
